backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: production  
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ahmedhmila/cooptastic-backend:v1.0.1
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: pdf-storage
          mountPath: /usr/src/app/src/pdfs
      volumes:
      - name: pdf-storage
        persistentVolumeClaim:
          claimName: pdf-storage-pvc
