frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: production
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ahmedhmila/cooptastic-network-frontend-app:v-8
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "300m"
            memory: "384Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
