frontend-LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: production
spec:
  type: LoadBalancer
  loadBalancerIP: 52.249.243.127  # <--- IP statique Azure déjà créée moddifier si tu recreer les ressources groupe
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 30080
